karnc/tests/fixtures/positive/77_two_contexts_same_commons/src/commerce/payment.karn
context commerce.payment {
  uses commerce.money

  exports transparent { Payment }

  type Payment = {
    amount: Money,
  }
}
