karnc/tests/fixtures/negative/60_cross_context_money_mismatch/src/commerce/payment.karn
context commerce.payment {
  exports transparent { Amount }

  -- The payment context owns its own Amount type, distinct nominally from
  -- the commons commerce.money's Amount when contexts use that commons.
  type Amount = Int where Positive
}
